--- a/build-win10/CMakeLists.txt
+++ b/build-win10/CMakeLists.txt
@@ -6,32 +6,27 @@ set(PP_FILES
         ../source/main.cpp
         ../source/PPApp.cpp
         ../source/PPApp.h
-        ../source/controllers/PPGlobalConfig.cpp
-        ../source/controllers/PPGlobalConfig.h
+        ../source/controllers/PPGlobalConfigController.cpp
+        ../source/controllers/PPGlobalConfigController.h
         ../source/scenes/gameplay/PPCanvas.cpp
         ../source/scenes/gameplay/PPCanvas.h
         ../source/scenes/gameplay/PPColorPalette.cpp
         ../source/scenes/gameplay/PPColorPalette.h
-        ../source/scenes/gameplay/PPCanvasBlock.cpp
-        ../source/scenes/gameplay/PPCanvasBlock.h
-        ../source/scenes/gameplay/PPColorStrip.cpp
-        ../source/scenes/gameplay/PPColorStrip.h
         ../source/scenes/gameplay/PPGameScene.cpp
         ../source/scenes/gameplay/PPGameScene.h
         ../source/scenes/loading/PPLoadingScene.h
         ../source/scenes/loading/PPLoadingScene.cpp
-        ../source/controllers/PPGameState.h
-        ../source/controllers/PPGameState.cpp
-        ../source/utils/PPAssets.cpp
-        ../source/utils/PPAssets.h
+        ../source/controllers/PPGameStateController.h
+        ../source/controllers/PPGameStateController.cpp
         ../source/utils/PPTimer.cpp
         ../source/utils/PPTimer.h
         ../source/utils/PPTypeDefs.h
         ../source/utils/PPHeader.h
-        ../source/controllers/PPInput.h
-        ../source/controllers/PPInput.cpp
+        ../source/controllers/PPInputController.h
+        ../source/controllers/PPInputController.cpp
+        ../source/models/PPGameState.h
         ../source/utils/PPAnimation.h
-        ../source/utils/PPAnimation.cpp)
+        ../source/utils/PPAnimation.cpp ../source/controllers/PPActionController.h)
 
 set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)
 
