--- a/build-apple/Resources/Mac-Info.plist
+++ b/build-apple/Resources/Mac-Info.plist
@@ -25,7 +25,8 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Game Design Initiative at Cornell. All rights reserved.</string>
+	<string>Created by Bryan Graeser, Wenhao "Leo" Liang, Lindsey Potoff, Laura Sizemore, Ben Gillot, Ansh Godha, Syeyoung Ko, Yuanhao Zhu.
+Copyright © 2020 Dragonglass Studios. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
