--- a/build-win10/PanicPainter/PanicPainter.vcxproj
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj
@@ -187,18 +187,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\source\controllers\PPGlobalConfig.cpp" />
-    <ClCompile Include="..\..\source\controllers\PPInput.cpp" />
+    <ClCompile Include="..\..\source\controllers\PPGameStateController.cpp" />
+    <ClCompile Include="..\..\source\controllers\PPGlobalConfigController.cpp" />
+    <ClCompile Include="..\..\source\controllers\PPInputController.cpp" />
     <ClCompile Include="..\..\source\main.cpp" />
-    <ClCompile Include="..\..\source\controllers\PPGameState.cpp" />
     <ClCompile Include="..\..\source\PPApp.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPCanvas.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorPalette.cpp" />
-    <ClCompile Include="..\..\source\scenes\gameplay\PPCanvasBlock.cpp" />
-    <ClCompile Include="..\..\source\scenes\gameplay\PPColorStrip.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPGameScene.cpp" />
     <ClCompile Include="..\..\source\scenes\loading\PPLoadingScene.cpp" />
-    <ClCompile Include="..\..\source\utils\PPAssets.cpp" />
     <ClCompile Include="..\..\source\utils\PPAnimation.cpp" />
     <ClCompile Include="..\..\source\utils\PPTimer.cpp" />
   </ItemGroup>
@@ -214,20 +211,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\source\controllers\PPGlobalConfig.h" />
-    <ClInclude Include="..\..\source\controllers\PPInput.h" />
-    <ClInclude Include="..\..\source\controllers\PPGameState.h" />
+    <ClInclude Include="..\..\source\controllers\PPActionController.h" />
+    <ClInclude Include="..\..\source\controllers\PPGameStateController.h" />
+    <ClInclude Include="..\..\source\controllers\PPGlobalConfigController.h" />
+    <ClInclude Include="..\..\source\controllers\PPInputController.h" />
+    <ClInclude Include="..\..\source\models\PPGameState.h" />
     <ClInclude Include="..\..\source\PPApp.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPCanvas.h" />
-    <ClInclude Include="..\..\source\scenes\gameplay\PPCanvasBlock.h" />
-    <ClInclude Include="..\..\source\scenes\gameplay\PPColorStrip.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorPalette.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPGameScene.h" />
     <ClInclude Include="..\..\source\scenes\loading\PPLoadingScene.h" />
-    <ClInclude Include="..\..\source\utils\PPAssets.h" />
+    <ClInclude Include="..\..\source\utils\PPAnimation.h" />
     <ClInclude Include="..\..\source\utils\PPHeader.h" />
     <ClInclude Include="..\..\source\utils\PPTimer.h" />
-    <ClInclude Include="..\..\source\utils\PPAnimation.h" />
     <ClInclude Include="..\..\source\utils\PPTypeDefs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
