--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -26,6 +26,9 @@
     <Filter Include="Models">
       <UniqueIdentifier>{0c54b165-221a-4191-9051-54c4640ab79d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scenes\Pause">
+      <UniqueIdentifier>{a1a0c970-5c51-4088-b971-4b935ff8bb6f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\main.cpp">
@@ -37,7 +40,6 @@
     <ClCompile Include="..\..\source\scenes\loading\PPLoadingScene.cpp">
       <Filter>Scenes\Loading</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\source\controllers\PPInput.cpp" />
     <ClCompile Include="..\..\source\utils\PPAnimation.cpp">
       <Filter>Utilities</Filter>
     </ClCompile>
@@ -61,6 +63,18 @@
     </ClCompile>
     <ClCompile Include="..\..\source\controllers\PPInputController.cpp">
       <Filter>Controllers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\controllers\PPActionController.cpp">
+      <Filter>Controllers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPCanvasBlock.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPColorStrip.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\pause\PPPauseScene.cpp">
+      <Filter>Scenes\Pause</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -115,6 +129,15 @@
     </ClInclude>
     <ClInclude Include="..\..\source\controllers\PPInputController.h">
       <Filter>Controllers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPCanvasBlock.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPColorStrip.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\pause\PPPauseScene.h">
+      <Filter>Scenes\Pause</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
