added first animation

--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -82,6 +82,9 @@
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorPaletteView.cpp">
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPSplashEffect.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PanicPainter.rc">
@@ -149,6 +152,12 @@
       <Filter>Scenes\Pause</Filter>
     </ClInclude>
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorPaletteView.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPSplashEffect.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPSplashNode.h">
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
   </ItemGroup>
