Update code style

--- a/build-win10/CMakeLists.txt
+++ b/build-win10/CMakeLists.txt
@@ -44,7 +44,7 @@ set(PP_FILES
         ../source/scenes/menu/PPMenuScene.h
         ../source/scenes/menu/PPMenuScene.cpp
         ../source/scenes/level/PPLevelSelectScene.h
-        ../source/scenes/level/PPLevelSelectScene.cpp)
+        ../source/scenes/level/PPLevelSelectScene.cpp ../source/utils/PPRandom.cpp)
 
 set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)
 
